Closed Bug 749750 Opened 12 years ago Closed 12 years ago

AndroidBridge::CreateSurface returns local ref

Categories

(Firefox for Android Graveyard :: General, defect, P2)

ARM
Android
defect

Tracking

(firefox14 fixed, blocking-fennec1.0 +)

RESOLVED FIXED
Firefox 15
Tracking Status
firefox14 --- fixed
blocking-fennec1.0 --- +

People

(Reporter: snorp, Assigned: snorp)

References

Details

Attachments

(1 file)

AndroidBridge::CreateSurface calls NewGlobalRef, but doesn't assign the result. Consequently, the local ref is returned, which causes problems on API v14 due to the closing of this loophole.
blocking-fennec1.0: --- → ?
Attachment #619141 - Flags: review?(blassey.bugs) → review+
Comment on attachment 619141 [details] [diff] [review]
Correctly ref created Surfaces on Android

[Approval Request Comment]
Trivial patch, no risk, blocks 746703
Attachment #619141 - Flags: approval-mozilla-aurora?
http://hg.mozilla.org/mozilla-central/rev/b89b6430e4bf
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: Firefox 14 → Firefox 15
QA: please test to see if this possibly fixes 738198
Keywords: qawanted
Let's find out if this is blocking fennec 1.0 before approving for Aurora 14.
This blocks a blocker.  (See bug 746703 comment 34 for details.)
(In reply to James Willcox (:snorp) (jwillcox@mozilla.com) from comment #5)
> QA: please test to see if this possibly fixes 738198

Crashes that are related to Bug 738198 have been reproduced on Nightly/15.0a1 2012-05-01 on a Motorola Droid Pro(Android 2.3.4). The issue does not seem to be fixed by this patch.
Keywords: qawanted
Comment on attachment 619141 [details] [diff] [review]
Correctly ref created Surfaces on Android

[Triage Comment]
Approving along with bug 746703 for Aurora 14.
Attachment #619141 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
blocking-fennec1.0: ? → +
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: