Bug 749750 - Correctly ref created Surfaces on Android r=blassey