widget/android/AndroidBridge.cpp
@@ -2099,7 +2099,7 @@ AndroidBridge::CreateSurface()
 
   jobject surface = env->CallStaticObjectMethod(mGeckoAppShellClass, jCreateSurface);
   if (surface)
-    env->NewGlobalRef(surface);
+    surface = env->NewGlobalRef(surface);
   
   return surface;
 #endif
